Fixed shift tile bug

--- a/GameJS/client/styles/clsDisplayPanel.css
+++ b/GameJS/client/styles/clsDisplayPanel.css
@@ -4,5 +4,5 @@
     border:1px solid blue;
     display:inline-block;
     margin:5px;
-    //overflow:hidden;
+    overflow:hidden;
 }
